--- a/src/FakeRelay.Web/FakeRelay.Web.csproj
+++ b/src/FakeRelay.Web/FakeRelay.Web.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\FakeRelay.Core\FakeRelay.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="prometheus-net.AspNetCore" Version="7.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
